tests/miniJava/neg/006685_mutation.MiniJava
class java { public static void new Main ( String [ ] java ) { { } } }
